--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -10,11 +10,12 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  test-apis:
     runs-on: ubuntu-latest
     steps:
     - name: Run Newman
       uses: matt-ball/newman-action@v1.0.4
       with:
         workingDir: "Postman Collections"
+        collection: "weather-for-sue.json"
 
