--- a/.github/workflows/newman-api-based.yml
+++ b/.github/workflows/newman-api-based.yml
@@ -19,3 +19,5 @@ jobs:
         apiKey: ${{ secrets.POSTMAN_API_KEY }}
         collection: "22874692-840e614a-d38c-4a05-b152-0701fab17fba"
         reporters: '["json"]'
+    - name: ls
+      run: ls
