--- a/.github/workflows/newman-api-based.yml
+++ b/.github/workflows/newman-api-based.yml
@@ -19,7 +19,7 @@ jobs:
         apiKey: ${{ secrets.POSTMAN_API_KEY }}
         collection: "22874692-840e614a-d38c-4a05-b152-0701fab17fba"
         reporters: '["json"]'
-        reporter: "{ json : { export : 'results.json' } }"
+        reporter: "json : { export : 'results.json' }"
     - name: ls
       run: ls
       
