--- a/.github/workflows/newman-api-based.yml
+++ b/.github/workflows/newman-api-based.yml
@@ -20,6 +20,6 @@ jobs:
         collection: "22874692-840e614a-d38c-4a05-b152-0701fab17fba"
         reporters: '["json"]'
         reporter: '{"json" : { "export" : "results.json" }}'
-    - name: ls
-      run: ls
+    - name: Show results.json
+      run: cat results.json
       
